tests/sksl/errors/BadIndex.dsl.glsl
### Compilation failed:

error: expected array, but found 'int'

1 error
